<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.tsdl</groupId>
    <artifactId>root</artifactId>
    <packaging>pom</packaging>
    <version>${revision}</version>
    <name>root</name>
    <description>Parent module of all TSDL-related modules.</description>

    <modules>
        <module>infrastructure</module>
        <module>service</module>
        <module>implementation</module>
        <module>storage</module>
        <module>test-util</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.3.0</version>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.8</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${checkstyle.plugin.version}</version>
                <configuration>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <failsOnError>true</failsOnError>
                    <failOnViolation>true</failOnViolation>
                    <violationSeverity>warning</violationSeverity>
                    <consoleOutput>true</consoleOutput>
                    <configLocation>${checkstyle.config}</configLocation>
                    <linkXRef>false</linkXRef>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${checkstyle.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.tsdl</groupId>
                <artifactId>infrastructure</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.tsdl</groupId>
                <artifactId>storage</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.tsdl</groupId>
                <artifactId>implementation</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.tsdl</groupId>
                <artifactId>test-util</artifactId>
                <version>${revision}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <properties>
        <revision>0.1-SNAPSHOT</revision>   <!-- MUST be called "revision" -->
        <java.version>17</java.version>
        <project.fileEncoding>UTF-8</project.fileEncoding>
        <project.build.sourceEncoding>${project.fileEncoding}</project.build.sourceEncoding>
        <maven.compiler.plugin.version>3.9.0</maven.compiler.plugin.version>
        <maven.surefire.plugin.version>3.0.0-M6</maven.surefire.plugin.version>
        <assertj.version>3.23.1</assertj.version>
        <junit.version>5.8.2</junit.version>
        <mockito.version>4.6.1</mockito.version>
        <antlr.version>4.10.1</antlr.version>
        <mojo.version>3.3.0</mojo.version>
        <jfreechart.version>1.5.3</jfreechart.version>
        <logback.version>1.2.11</logback.version>
        <lombok.version>1.18.24</lombok.version>
        <checkstyle.plugin.version>3.1.2</checkstyle.plugin.version>
        <checkstyle.version>9.3</checkstyle.version>
        <checkstyle.config>${project.basedir}/checkstyle.xml</checkstyle.config>
    </properties>

</project>